--- a/Oxford Brookes Bus/Base.lproj/Main.storyboard
+++ b/Oxford Brookes Bus/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="s0R-ee-F6h">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Routes-->
@@ -16,17 +17,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="133" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="MCL-Cy-W8e">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="133" id="MCL-Cy-W8e">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MCL-Cy-W8e" id="vSn-sU-fXR">
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="zgI-Kq-8cy" kind="show" identifier="routeToTime" id="pr4-63-6gz"/>
+                                            <segue destination="TqT-WR-H09" kind="show" identifier="routeToTime" id="Wnu-6g-ytY"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -48,34 +49,6 @@
             </objects>
             <point key="canvasLocation" x="1234.5" y="320.5"/>
         </scene>
-        <!--Times-->
-        <scene sceneID="uEE-Bs-5P9">
-            <objects>
-                <tableViewController id="zgI-Kq-8cy" customClass="TimeTableViewController" customModule="Oxford_Brookes_Bus" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="yAa-bu-jh6">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="timeCell" id="BmI-vL-3pL">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BmI-vL-3pL" id="J3M-zf-MGc">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="zgI-Kq-8cy" id="Z2F-vD-qKg"/>
-                            <outlet property="delegate" destination="zgI-Kq-8cy" id="4lM-4i-URM"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Times" id="Zqy-yQ-AfT"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ool-xk-WRW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2108.5" y="312.5"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="XEf-I3-qat">
             <objects>
@@ -95,27 +68,94 @@
             </objects>
             <point key="canvasLocation" x="771.5" y="325.5"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="hdY-dM-H79">
+        <!--Times-->
+        <scene sceneID="dUZ-Ls-zfp">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TWn-J1-XHr" sceneMemberID="viewController">
+                <viewController id="TqT-WR-H09" customClass="TimeViewController" customModule="Oxford_Brookes_Bus" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CXg-6x-1Cp"/>
+                        <viewControllerLayoutGuide type="bottom" id="3RJ-ye-nrk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QRA-cX-hRu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="apj-bx-Nmp">
+                                <rect key="frame" x="83" y="574" width="209" height="29"/>
+                                <segments>
+                                    <segment title="Weekday"/>
+                                    <segment title="Saturday"/>
+                                    <segment title="Sunday"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentChange:" destination="TqT-WR-H09" eventType="valueChanged" id="Tpx-nC-wXR"/>
+                                </connections>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4dW-Wr-RRz">
+                                <rect key="frame" x="0.0" y="64" width="375" height="489"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="489" id="RLx-Mw-YPM"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="timeCell" id="Vcf-5r-ODk">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Vcf-5r-ODk" id="TMX-ff-dUu">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="TqT-WR-H09" id="dwY-jH-QIU"/>
+                                    <outlet property="delegate" destination="TqT-WR-H09" id="eTQ-mV-eMi"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="leading" secondItem="QRA-cX-hRu" secondAttribute="leadingMargin" constant="-16" id="80n-Qp-dcy"/>
+                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="leading" secondItem="QRA-cX-hRu" secondAttribute="leadingMargin" constant="-16" id="E4C-hR-vq6"/>
+                            <constraint firstItem="3RJ-ye-nrk" firstAttribute="top" secondItem="apj-bx-Nmp" secondAttribute="bottom" constant="65" id="ODO-NK-E2R"/>
+                            <constraint firstAttribute="centerX" secondItem="4dW-Wr-RRz" secondAttribute="centerX" id="Tnd-VC-9KV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4dW-Wr-RRz" secondAttribute="trailing" constant="-16" id="YGt-8B-6z2"/>
+                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="CXg-6x-1Cp" secondAttribute="bottom" id="aOb-bQ-5c6"/>
+                            <constraint firstAttribute="centerX" secondItem="apj-bx-Nmp" secondAttribute="centerX" id="mIk-pa-FAY"/>
+                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="QRA-cX-hRu" secondAttribute="topMargin" constant="64" id="sLI-z9-Hj1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4dW-Wr-RRz" secondAttribute="trailing" constant="-16" id="ynq-ym-ely"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Times" id="Dan-fj-vuv"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="dayOfWeek" destination="apj-bx-Nmp" id="Xtx-9s-SEe"/>
+                        <outlet property="timeTable" destination="4dW-Wr-RRz" id="uYE-Vg-2Hq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aRU-7C-eIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2114.5" y="313.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2QJ-VZ-aNs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iAU-O2-yiV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6qb-Ul-953">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JcZ-CG-arZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="zgI-Kq-8cy" kind="relationship" relationship="rootViewController" id="LB4-zm-F0L"/>
+                        <segue destination="TqT-WR-H09" kind="relationship" relationship="rootViewController" id="fNM-aq-CLs"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ekm-yi-dtc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wu2-VE-Mcp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1657.5" y="320.5"/>
+            <point key="canvasLocation" x="1670.5" y="313.5"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="LB4-zm-F0L"/>
+        <segue reference="Wnu-6g-ytY"/>
     </inferredMetricsTieBreakers>
 </document>
